==> NSJ-student/MP3_Player-old-/TouchPanel/TouchPanel.c <==
#include "TouchPanel/TouchPanel.h"
#include "LCD/LCD.h"
#define THRESHOLD 2

static void ADS7843_SPI_Init(void) 
{ 
	__HAL_RCC_SPI2_CLK_ENABLE();

	//SPI_I2S_DeInit(Open_SPI);
	
	SPI_HandleStruct.Instance		= SPI2;
	SPI_HandleStruct.State			= HAL_SPI_STATE_RESET;
	/* Open_SPI Config -------------------------------------------------------------*/ 
	SPI_HandleStruct.Init.Direction 	= SPI_DIRECTION_2LINES; 
	SPI_HandleStruct.Init.Mode 		= SPI_MODE_MASTER; 
	SPI_HandleStruct.Init.DataSize 	= SPI_DATASIZE_8BIT; 
	SPI_HandleStruct.Init.CLKPolarity 	= SPI_POLARITY_LOW; 
	SPI_HandleStruct.Init.CLKPhase 	= SPI_PHASE_1EDGE; 
	SPI_HandleStruct.Init.NSS 			= SPI_NSS_SOFT; 
	SPI_HandleStruct.Init.BaudRatePrescaler 	= SPI_BAUDRATEPRESCALER_32; 
	SPI_HandleStruct.Init.FirstBit 		= SPI_FIRSTBIT_MSB; 
	SPI_HandleStruct.Init.TIMode		= SPI_TIMODE_DISABLE;
	SPI_HandleStruct.Init.CRCCalculation	= SPI_CRCCALCULATION_DISABLE;
	SPI_HandleStruct.Init.CRCPolynomial 	= 7; 

	HAL_SPI_Init(&SPI_HandleStruct);
	__HAL_SPI_ENABLE(&SPI_HandleStruct);
}

void TP_Init(void) 
{ 	
	GPIO_InitTypeDef GPIO_InitStructure; 
	// RCC init
	__HAL_RCC_GPIOB_CLK_ENABLE();		// SCK, MISO, MOSI
	__HAL_RCC_GPIOC_CLK_ENABLE();		// CS
	__HAL_RCC_SPI2_CLK_ENABLE();			// SPI

	GPIO_InitStructure.Pin 			= GPIO_PIN_13 | GPIO_PIN_14 | GPIO_PIN_15 ;	// SCK, MISO, MOSI
	GPIO_InitStructure.Mode 		= GPIO_MODE_AF_PP;		// push-pull alternate
	GPIO_InitStructure.Speed 		= GPIO_SPEED_FREQ_VERY_HIGH;	// 100 MHz
	GPIO_InitStructure.Alternate 	= GPIO_AF5_SPI2;
	GPIO_InitStructure.Pull  		= GPIO_PULLUP;			// pull up
	
	HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);
	
	GPIO_InitStructure.Pin 			= GPIO_PIN_4;		// CS
	GPIO_InitStructure.Mode 		= GPIO_MODE_OUTPUT_PP;	// push-pull output
	
	HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);

	GPIO_InitStructure.Pin 			= GPIO_PIN_5;		// IRQ
	GPIO_InitStructure.Mode 		= GPIO_MODE_INPUT;		// input
	
	HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);
	
  	TP_CS(1); 
  	ADS7843_SPI_Init(); 
}

static void WR_CMD (uint8_t cmd)  
{ 
	uint8_t buff_tx= cmd;
	uint8_t buff_rx;
	/* Wait for SPI2 Tx buffer empty */ 
	//while (SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET); 
	/* Send SPI2 data */ 
	
	/* Wait for SPI2 data reception */ 
	//while (SPI_I2S_GetFlagStatus(Open_SPI, SPI_I2S_FLAG_RXNE) == RESET); 
	/* Read Open_SPI received data */ 
	
	HAL_SPI_TransmitReceive(&SPI_HandleStruct, &buff_tx, &buff_rx, 1, 100);
	// Timeout : 전송 대기 시간(systick 단위)
}
